# dashboard

./: Makefile  README.md  docker-compose.yaml  index.html  package-lock.json  package.json
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/database/: client.py
backend/app/models/: __init__.py  guild.py  oauth.py  scrim.py
backend/app/routers/: guild.py  oauth.py  scrim.py  user.py
backend/app/utils/: checks.py  frequent.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.css  index.js
frontend/src/assets/: index.js
frontend/src/components/: NavBar.jsx  Navbar.jsx  index.js
frontend/src/components/Buttons/: Commanbtn.jsx
frontend/src/components/Core/: Callback.jsx  DropDown.jsx  Footer.jsx  Loader.jsx  Navbar.jsx  Premium.jsx  Servers.jsx  Sidebar.jsx
frontend/src/components/Server Components/: Cart.jsx  CreateScrims.jsx  Scrims.jsx  ServerHome.jsx
frontend/src/components/common/: Button.jsx  ConfirmLogout.jsx  Footer.jsx  Loader.jsx  PrivateRoute.jsx  Sidebar.jsx
frontend/src/components/guildsMenu/: Servers.jsx
frontend/src/components/home/: About.jsx  Footer.jsx  games.css  hero.jsx
frontend/src/components/layouts/: BorderButton.jsx  Inner.jsx  (+2 more)
frontend/src/constants/: index.js
frontend/src/pages/: Contact.jsx  Dashboard.jsx  Github.jsx  Home.jsx  Login.jsx  PolicyP.jsx  Premium.jsx  RefundPolicy.jsx  ServerInfo.jsx  Terms.jsx
src/: App.jsx  index.css
src/components/: NavBar.jsx
src/components/home/: About.jsx  Footer.jsx  Games.jsx  games.css  hero.jsx
src/components/layouts/: Text.jsx
src/pages/: Contact.jsx  ErrorPage.jsx  Home.jsx  PolicyP.jsx  RefundPolicy.jsx  Terms.jsx
(+7 files in other folders)
