[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["deadaf <gahlyanrohit18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
tortoise-orm = "^0.20.0"
asyncpg = "^0.28.0"
python-decouple = "^3.8"
httpx = "^0.25.0"
fastapi-cache2 = "^0.2.1"
aiocache = {extras = ["redis"], version = "^0.12.2"}
dateparser = "^1.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
