[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["deadaf <gahlyanrohit18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
tortoise-orm = "^0.20.0"
asyncpg = "^0.29.0"
python-decouple = "^3.8"
httpx = "^0.27.0"
fastapi-cache2 = "^0.2.1"
dateparser = "^1.2.0"
aiocache = {extras = ["redis"], version = "^0.12.2"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
